# final-trps

./: .gitignore  Cargo.toml  Пояснения.txt  ТЗ Зимин В.С. ИУ6-51Б.odt
doc/: .$ДВИ.drawio.bkp  ДВИ.drawio  ДК.drawio  КМПО.drawio  Мини-структурная схема.drawio  Общая диаграмма классов.drawio  РПЗ Зимин В.С. ИУ6-51Б.odt  РПЗ Кусочек.odt  Репозиторий Зимин В.С. ИУ6-51Б.odt  Руководство Зимин В.С. ИУ6-51Б.odt  ТЗ Зимин В.С. ИУ6-51Б.odt  ТЗ.odt
example/: catenator.rs  echo-3.cpp  echoline  echoline.rs  gcd.cpp  intparse.rs  make.bat  make.sh  smcheck.rs
src/: classes.rs  communicator.rs  converter.rs  generator.rs  gui.rs  main.rs  parser.rs  rules.rs  run_manager.rs  runner.rs  strategies.rs  validator.rs  worker_thread.rs
src/gui/: file_select.rs  rule_data.rs  rule_panel.rs
