[package]
name = "final-trps"
version = "0.1.0"
authors = ["Solar-Falcon"]
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0"
bstr = "1.10"
rand = "0.8"
regex-syntax = "0.8"
regex = "1.11"
time = { version = "0.3", features = ["formatting"] }

eframe = "0.30"
egui-file-dialog = "0.8"

[profile.dev]
opt-level = 2

[profile.dev.package.'*']
opt-level = 3
